kubernetes/apps/selfhosted/tika/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tika
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tika
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui
      toPorts:
        - ports:
            - port: "9998"
              protocol: TCP
